# cfdARCOV2

./: .gitignore  CMakeLists.txt  baks.bak  output_first_try_a100.txt  profile_bad_wave_big.txt  report_history_a100_cuda_full_no_data_move.csv  report_history_a100_cuda_full_no_data_move_even_better.csv  report_history_a100_cuda_full_no_data_move_even_better_no_kernelbuilder.csv  report_history_a100_cuda_full_no_data_move_no_kernelbuild.csv
examples/: main.cpp  main.cpp.baaaaak.bak  main.cpp.bakbak.bak  main_2d_via_3d.cpp  main_2d_via_3d_basic.cpp  main_3d.cpp  main_3d_heat.cpp  main_3d_sod_shock.cpp  main_3d_testing_grad.cpp  main_3d_wave.cu  main_3d_wave_gauss_pulse.cu  main_heat.cpp  main_instability.cpp  main_shallow_water.cpp  main_wave.cpp  pres_ex_main.cpp
examples/wave_eq/: acoustic.cpp  acoustic_px_py.cpp  elastic.cpp  elastic_second_order.cpp
include/: abstract_mesh.hpp  cfdarcho_main_3d.hpp  cuda_data_matrix.hpp  cuda_operators.hpp  custom_cuda_functions.hpp  decls.hpp  eigen_holder.hpp  fvm3d.hpp  grad_utils.hpp  io_operators_tmpl.hpp  jit_config.h.in  mesh3d.hpp  pool_allocator.hpp  utils3d.hpp
legacy/: cfdarcho_main.cpp  cfdarcho_main.hpp  distribution_algo.cpp  distribution_algo.hpp  fvm.cpp  fvm.hpp  io_operators.cpp  io_operators.hpp  main_inference.cpp  mesh2d.cpp  mesh2d.hpp  utils.cpp  utils.hpp  val_utils.cpp  val_utils.hpp
reports/: compare_gauss_pulse.py  compare_sod_shock.py  report_cuda.py  report_cuda_full.py  report_cuda_multigpu_full.py  report_history.csv  report_main.py  report_main_full.py  report_per_nodes_full.csv  report_per_nodes_full_reduced.csv
scripts/: basic_visualizer.py  benchmark_cfdarchov2.py  compare_openfoan_cfdarcho_laplacian.py  get_strange_mesh.py  heatmap.py  heatmap_openfoam.py  report_history.csv.bak  shallow_water.py  streamplot_u_v.py  streamplot_u_v_openfoam.py  test_cuda_execution.py  test_cuda_multigpu_execution.py  test_distribution_compare.py  test_parallel_execution.py  test_parallel_onnodes_execution.py  visualize_mesh.py  visualize_variable_mesh.py  wave.py  wave_elastic.py
scripts/v2_results/: report_cfdarchov2_hip_compare.py  report_cfdarchov2_kernelbuilder_impact.py  report_cfdarchov2_scale.py  report_cuda_a100_kernelbuilder.csv  report_cuda_a100_no_kernelbuilder.csv  report_history_a100_cuda_full_no_data_move.csv  report_history_a100_cuda_full_no_data_move_even_better.csv  report_history_a100_cuda_full_no_data_move_even_better_no_kernelbuilder.csv  report_history_a100_cuda_full_no_data_move_no_kernelbuilder.csv  report_history_cpu64_full_no_data_move.csv  report_history_rtx3060_hip_no_cuda_boundary.csv  report_history_rtx3060_no_cuda_boundary.csv
src/: cfdarcho_main_3d.cpp  cuda_operators.cu  fvm3d.cpp  mesh3d.cpp  pool_allocator.cpp
